@@ -16,6 +16,7 @@ Bugs fixed
 * C++, added support for ``extern`` and ``thread_local``.
 * C++, type declarations are now using the prefixes ``typedef``, ``using``, and ``type``,
   depending on the style of declaration.
+* #2394: Fix Sphinx crashes when html_last_updated_fmt is invalid
 
 
 Release 1.4 (released Mar 28, 2016)
